# aifad

./: .bzrignore  .gitignore  .hgignore  .merlin  AUTHORS.txt  CHANGELOG.md  CHANGES.md  CHANGES.txt  Changes  INSTALL.txt  LICENSE.md  Makefile  OCamlMakefile  OMakefile  README.md  README.txt  TODO.md  TODO.txt  VERSION  _config.yml  _oasis  _tags  aifad.opam  aifad.vim  dune  dune-project  index.html  index.md  myocamlbuild.ml  params.json  setup.ml
api/: index.html
api/aifad/: index.html
examples/: breast_cancer1.add  breast_cancer1.ads  breast_cancer2.add  breast_cancer2.ads  c45.data  c45.names  large.ads  test.add  test.ads
src/: Makefile  OMakefile  aifad.ml  algdt_lexer.mll  algdt_parser.ml  algdt_parser.mli  algdt_parser_y.mly  algdt_pp.ml  algdt_pp.mli  algdt_types.ml  algdt_types.mli  algdt_utils.ml  algdt_utils.mli  apply.ml  apply.mli  c45_io.ml  c45_io.mli  cmd_args.ml  cmd_args.mli  complexity.ml  complexity.mli  data_io.ml  dd2_entropy.ml  deco_impl.ml  deco_intf.ml  deco_intf.mli  ds2_entropy.ml  ds_entropy.ml  dshave.ml  dune  entropy_utils.ml  eval.ml  factor.ml  gain_impl.ml  gain_intf.ml  gain_intf.mli  id_entropy.ml  info_utils.ml  is_entropy.ml  jbuild  (+22 more)
