opam-version: "2.0"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [ "Markus Mottl <markus.mottl@gmail.com>" ]
license: "LGPL-2.1+ with OCaml linking exception"
homepage: "https://mmottl.github.io/aifad"
doc: "https://mmottl.github.io/aifad/api"
dev-repo: "git+https://github.com/mmottl/aifad.git"
bug-reports: "https://github.com/mmottl/aifad/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.04"}
  "dune" {>= "1.7.0"}
  "res"
  "pcre"
  "cfg" {>= "2.1.0"}
]

synopsis: "AIFAD - Automated Induction of Functions over Algebraic Datatypes"

description: """
AIFAD is a machine learning tool that generalizes decision tree learning to
algebraic datatypes."""
